2002-12-03  Fumitoshi UKAI  <ukai@debian.or.jp>

	* remove ununsed variables
	* file.c (addLink): unused variable `t'
	* menu.c (lmGoURL): unused variable `pu'

2002-12-03  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03501] link tag support
	* buffer.c (reshapeBuffer): initialize formlist, linklist,
					maplist, hmarklist, imarklist
	* file.c (addLink): added
		(HTMLlineproc2body): add HTML_LINK
		(loadHTMLstream): use HTMLlineproc0 not in R_ST_NORMAL
		(reloadBuffer): initialize linklist, maplist, 
				hmarklist, imarklist
	* fm.h (LINK_TYPE_NONE): added
		(LINK_TYPE_REL): added
		(LINK_TYPE_REV): added
		(LinkList): added
		(Buffer): add linklist
	* html.c (ALST_LINK): added
		(TagMAP): add link
		(AtrMAP): add rel, rev, title
	* html.h (HTML_LINK): added
		(ATTR_REL): added
		(ATTR_REV): added
		(ATTR_TITLE): added
	* map.c (append_map_info): anchor
		(append_link_info): added
		(page_info_panel): append_link_info
	* menu.c (LinkMenu): added
		(linkV): added
		(initLinkMenu): added
		(lmGoURL): added
		(popupMenu): initLinkMenu()
		(initMenu): w3mMenuList new 4
				add "Link"
	* tagtable.tab (link): added

2002-11-29  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m bug] internal tag
	* display.c (loadHTMLstream): HTMLlineproc0 internal

2002-11-29  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03498] Re: parse <!-- ... --> in <script>
	* file.c (HTMLlineproc0): tag in textarea
	* frame.c (createFrameFile): fix comment processing in frame

2002-11-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03497] incorrect image size
	* image.c (getImageSize): invoke w3mimgdiplay -size instead of "5;..."
	* w3mimgdisplay.c (defined_size): added
			(main): if defined_size get_image_size()
			(GetOption): -size

2002-11-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03496] parse <!-- ... --> in <script>
	* etc.c (read_token): check <pre>
	* file.c (HTMLlineproc0): remove comment processing
			check pre mode